# ESP32_CAM_WEB_PAGE

./: .gitignore  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  camera_core.c  camera_http.c  idf_component.yml  main.c  secrets.h.example  take_picture.c
main/camera_core/: camera_core.c  camera_core.h  config.h
main/camera_http/: camera_http.c  camera_http.h
main/wifi_sta/: wifi_sta.c
